# plasma-ihatethecashew

./: CMakeLists.txt  ihtc.cpp  ihtc.h  plasma-applet-ihatethecashew.desktop
